# AspNetPerfTest

./: .gitignore  README.md  test.sh
be_actix/src/: main.rs  models.rs  schema.rs
be_csharp_dotnet/: Program.cs  Startup.cs  TodoList.csproj  TodoList.sln  appsettings.Development.json  appsettings.json
be_csharp_dotnet/Controllers/: IRepo.cs  Repo.cs  TodoController.cs
be_csharp_dotnet/Models/: TodoTask.cs
be_csharp_dotnet/Properties/: launchSettings.json
be_csharp_dotnet_core/: Program.cs  TodoList.csproj  appsettings.json
be_csharp_dotnet_core/Controllers/: TodoController.cs
be_csharp_dotnet_core/Properties/: launchSettings.json
be_csharp_dotnet_core/TodoList/: Program.cs  Startup.cs  (+2 more)
be_fastify/: package.json
be_fsharp_dotnet_core/: Program.fs  appsettings.json
be_fsharp_giraffe/: ConsoleApp1.sln  Handlers.fs  Models.fs  Program.fs  TodoList.fsproj  web.config  web.config_asdasd
be_go/: go.mod  server.go
be_go_atreugo/: go.mod  server.go
be_javascript_fastify/: server.js
be_kotlin_jooby/: build.gradle  pom.xml
be_kotlin_ktor/: build.gradle  settings.gradle
be_python_falcon/: models.py  requirements.txt  run.sh  server.py
be_python_fastapi/: requirements.txt  server.py
be_python_sanic/: initialize_db.py  requirements.txt  server.py
be_rust_actix/: Cargo.toml
be_rust_actix/src/: main.rs
database/: create_db.sh  createdb.sh  drop_db.sh  initialize_db.py  run.sh  setup.sh  stop.sh
fe_javascript_react/: package.json
perf/: Do.js  DoFSharp.js  rescsharp.txt  resfsharp.txt  run.ps1  runFSharp.ps1
tests/: test_endpoints.py
(+33 files in other folders)
