[package]
name = "be_actix"
version = "0.1.0"
authors = ["Daniel Pozmanter"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
actix-web = "1.0.0-beta.3"
diesel = { version = "1.4.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8.4"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
